--- a/src/pug/includes/portfolio-modal-2.pug
+++ b/src/pug/includes/portfolio-modal-2.pug
@@ -9,7 +9,7 @@
                     .row.justify-content-center
                         .col-lg-8
                             // Portfolio Modal - Title
-                            h2.portfolio-modal-title.text-secondary.text-uppercase.mb-0 Tasty Cake
+                            h2.portfolio-modal-title.text-secondary.text-uppercase.mb-0 Jobly
                             // Icon Divider
                             .divider-custom
                                 .divider-custom-line
@@ -17,10 +17,18 @@
                                     i.fas.fa-star
                                 .divider-custom-line
                             // Portfolio Modal - Image
-                            img.img-fluid.rounded.mb-5(src='assets/img/portfolio/cake.png', alt='...')
+                            a(href="https://electric-moon.surge.sh/" target="_blank")
+                                img.img-fluid.rounded.mb-5(src='assets/img/portfolio/jobly.png', alt='...')
                             // Portfolio Modal - Text
                             p.mb-4
-                                | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+                                | Jobly is a job-board platform where users can browse jobs by company, by all available jobs, or use a search engine to browse companies/jobs based on user input.
+                                br
+                                br
+                                | Stack:
+                                br
+                                | React / Javascript Front-End
+                                br
+                                | Express / Javascript Backend-End using raw SQL querries on a PostgreSQL DB
                             button.btn.btn-primary(data-bs-dismiss='modal')
                                 i.fas.fa-xmark.fa-fw
                                 | Close Window
