--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Freelancer - Start Bootstrap Theme
+        title Rusty Jones
 
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
@@ -28,9 +28,9 @@ html(lang='en')
         // Navigation
         nav#mainNav.navbar.navbar-expand-lg.bg-secondary.text-uppercase.fixed-top
             .container
-                a.navbar-brand(href='#page-top') Start Bootstrap
+                a.navbar-brand(href='#page-top') Rusty Jones
                 button.navbar-toggler.text-uppercase.font-weight-bold.bg-primary.text-white.rounded(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
-                    | Menu 
+                    | Menu
                     i.fas.fa-bars
                 #navbarResponsive.collapse.navbar-collapse
                     ul.navbar-nav.ms-auto
@@ -47,7 +47,7 @@ html(lang='en')
                 // Masthead Avatar Image
                 img.masthead-avatar.mb-5(src='assets/img/avataaars.svg', alt='...')
                 // Masthead Heading
-                h1.masthead-heading.text-uppercase.mb-0 Start Bootstrap
+                h1.masthead-heading.text-uppercase.mb-0 Rusty Jones
                 // Icon Divider
                 .divider-custom.divider-light
                     .divider-custom-line
@@ -55,7 +55,7 @@ html(lang='en')
                         i.fas.fa-star
                     .divider-custom-line
                 // Masthead Subheading
-                p.masthead-subheading.font-weight-light.mb-0 Graphic Artist - Web Designer - Illustrator
+                p.masthead-subheading.font-weight-light.mb-0 Code Connoisseur - Frontend Fanatic - Backend Buff
 
         // Portfolio Section
         section#portfolio.page-section.portfolio
@@ -76,42 +76,42 @@ html(lang='en')
                             .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
                                 .portfolio-item-caption-content.text-center.text-white
                                     i.fas.fa-plus.fa-3x
-                            img.img-fluid(src='assets/img/portfolio/cabin.png', alt='...')
+                            img.img-fluid(src='assets/img/portfolio/warbler.png', alt='...')
                     // Portfolio Item 2
                     .col-md-6.col-lg-4.mb-5
                         .portfolio-item.mx-auto(data-bs-toggle='modal', data-bs-target='#portfolioModal2')
                             .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
                                 .portfolio-item-caption-content.text-center.text-white
                                     i.fas.fa-plus.fa-3x
-                            img.img-fluid(src='assets/img/portfolio/cake.png', alt='...')
+                            img.img-fluid(src='assets/img/portfolio/jobly.png', alt='...')
                     // Portfolio Item 3
-                    .col-md-6.col-lg-4.mb-5
-                        .portfolio-item.mx-auto(data-bs-toggle='modal', data-bs-target='#portfolioModal3')
-                            .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
-                                .portfolio-item-caption-content.text-center.text-white
-                                    i.fas.fa-plus.fa-3x
-                            img.img-fluid(src='assets/img/portfolio/circus.png', alt='...')
+                    //- .col-md-6.col-lg-4.mb-5
+                    //-     .portfolio-item.mx-auto(data-bs-toggle='modal', data-bs-target='#portfolioModal3')
+                    //-         .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
+                    //-             .portfolio-item-caption-content.text-center.text-white
+                    //-                 i.fas.fa-plus.fa-3x
+                    //-         img.img-fluid(src='assets/img/portfolio/circus.png', alt='...')
                     // Portfolio Item 4
-                    .col-md-6.col-lg-4.mb-5.mb-lg-0
-                        .portfolio-item.mx-auto(data-bs-toggle='modal', data-bs-target='#portfolioModal4')
-                            .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
-                                .portfolio-item-caption-content.text-center.text-white
-                                    i.fas.fa-plus.fa-3x
-                            img.img-fluid(src='assets/img/portfolio/game.png', alt='...')
+                    //- .col-md-6.col-lg-4.mb-5.mb-lg-0
+                    //-     .portfolio-item.mx-auto(data-bs-toggle='modal', data-bs-target='#portfolioModal4')
+                    //-         .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
+                    //-             .portfolio-item-caption-content.text-center.text-white
+                    //-                 i.fas.fa-plus.fa-3x
+                    //-         img.img-fluid(src='assets/img/portfolio/game.png', alt='...')
                     // Portfolio Item 5
-                    .col-md-6.col-lg-4.mb-5.mb-md-0
-                        .portfolio-item.mx-auto(data-bs-toggle='modal', data-bs-target='#portfolioModal5')
-                            .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
-                                .portfolio-item-caption-content.text-center.text-white
-                                    i.fas.fa-plus.fa-3x
-                            img.img-fluid(src='assets/img/portfolio/safe.png', alt='...')
+                    //- .col-md-6.col-lg-4.mb-5.mb-md-0
+                    //-     .portfolio-item.mx-auto(data-bs-toggle='modal', data-bs-target='#portfolioModal5')
+                    //-         .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
+                    //-             .portfolio-item-caption-content.text-center.text-white
+                    //-                 i.fas.fa-plus.fa-3x
+                    //-         img.img-fluid(src='assets/img/portfolio/safe.png', alt='...')
                     // Portfolio Item 6
-                    .col-md-6.col-lg-4
-                        .portfolio-item.mx-auto(data-bs-toggle='modal', data-bs-target='#portfolioModal6')
-                            .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
-                                .portfolio-item-caption-content.text-center.text-white
-                                    i.fas.fa-plus.fa-3x
-                            img.img-fluid(src='assets/img/portfolio/submarine.png', alt='...')
+                    //- .col-md-6.col-lg-4
+                    //-     .portfolio-item.mx-auto(data-bs-toggle='modal', data-bs-target='#portfolioModal6')
+                    //-         .portfolio-item-caption.d-flex.align-items-center.justify-content-center.h-100.w-100
+                    //-             .portfolio-item-caption-content.text-center.text-white
+                    //-                 i.fas.fa-plus.fa-3x
+                    //-         img.img-fluid(src='assets/img/portfolio/submarine.png', alt='...')
 
         // About Section
         section#about.page-section.bg-primary.text-white.mb-0
@@ -128,15 +128,15 @@ html(lang='en')
                 .row
                     .col-lg-4.ms-auto
                         p.lead
-                            | Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.
+                            | I am a seasoned software engineer with expertise in web app development. Proficient in the latest frameworks and languages, I craft robust, responsive, and user-friendly applications. With a knack for elegant code and seamless user experiences, I continuously update my skills to keep pace with industry standards.
                     .col-lg-4.me-auto
                         p.lead
-                            | You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!
+                            | From conception to deployment, I ensure each project meets its objectives efficiently. Reach out to discuss collaboration, see past projects, or simply to connect!
                 // About Section Button
-                .text-center.mt-4
-                    a.btn.btn-xl.btn-outline-light(href='https://startbootstrap.com/theme/freelancer/')
-                        i.fas.fa-download.me-2
-                        | Free Download!
+                //- .text-center.mt-4
+                //-     a.btn.btn-xl.btn-outline-light(href='https://startbootstrap.com/theme/freelancer/')
+                //-         i.fas.fa-download.me-2
+                //-         | Free Download!
 
         // Contact Section
         section#contact.page-section
@@ -152,6 +152,11 @@ html(lang='en')
                 // Contact Section Form
                 .row.justify-content-center
                     .col-lg-8.col-xl-7
+                        p.lead
+                            i.fas.fa-fw.fa-envelope
+                            | Email: JustyRones@Gmail.com
+                        p.lead
+                            | Emails are generally read and replied to within 24 hours
 
                         // * * * * * * * * * * * * * * *
                         // * * SB Forms Contact Form * *
@@ -162,7 +167,7 @@ html(lang='en')
                         // https://startbootstrap.com/solution/contact-forms
                         // to get an API token!
 
-                        form#contactForm(data-sb-form-api-token='API_TOKEN')
+                        //- form#contactForm(data-sb-form-api-token='API_TOKEN')
 
                             // Name input
                             .form-floating.mb-3
@@ -237,37 +242,36 @@ html(lang='en')
         // Footer
         footer.footer.text-center
             .container
-                .row
+                .row.justify-content-center
                     // Footer Location
                     .col-lg-4.mb-5.mb-lg-0
                         h4.text-uppercase.mb-4 Location
                         p.lead.mb-0
-                            | 2215 John Daniel Drive
+                            | Fort Collins, Colorado
                             br
-                            | Clark, MO 65243
+                            | Remote
+                            br
+                            | Willing to Relocate
                     // Footer Social Icons
                     .col-lg-4.mb-5.mb-lg-0
                         h4.text-uppercase.mb-4 Around the Web
-                        a.btn.btn-outline-light.btn-social.mx-1(href='#!')
-                            i.fab.fa-fw.fa-facebook-f
-                        a.btn.btn-outline-light.btn-social.mx-1(href='#!')
-                            i.fab.fa-fw.fa-twitter
-                        a.btn.btn-outline-light.btn-social.mx-1(href='#!')
+                        a.btn.btn-outline-light.btn-social.mx-1(href='https://www.linkedin.com/in/russell--jones/')
                             i.fab.fa-fw.fa-linkedin-in
-                        a.btn.btn-outline-light.btn-social.mx-1(href='#!')
-                            i.fab.fa-fw.fa-dribbble
+                        a.btn.btn-outline-light.btn-social.mx-1(href='https://github.com/Dar-mok')
+                            i.fab.fa-fw.fa-github
+
                     // Footer About Text
-                    .col-lg-4
-                        h4.text-uppercase.mb-4 About Freelancer
-                        p.lead.mb-0
-                            | Freelance is a free to use, MIT licensed Bootstrap theme created by 
-                            a(href='http://startbootstrap.com') Start Bootstrap
-                            | .
+                    //- .col-lg-4
+                    //-     h4.text-uppercase.mb-4 About Freelancer
+                    //-     p.lead.mb-0
+                    //-         | Freelance is a free to use, MIT licensed Bootstrap theme created by
+                    //-         a(href='http://startbootstrap.com') Start Bootstrap
+                    //-         | .
 
         // Copyright Section
         div.copyright.py-4.text-center.text-white
             .container
-                small Copyright &copy; Your Website 2023
+                small Copyright &copy; RustyJones 2023
 
         // Portfolio Modals
         include includes/portfolio-modal-1.pug
